tests/ui/trait-bounds/issue-82038.stderr
error[E0277]: the trait bound `bool: Foo` is not satisfied
  --> $DIR/issue-82038.rs:8:6
   |
LL |     <bool as Foo>::my_method();
   |      ^^^^ the trait `Foo` is not implemented for `bool`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-82038.rs:3:1
   |
LL | trait Foo {
   | ^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
